# nautobot_plugin_example

./: README.md  dockerfile  navigation.py  pyproject.toml  views.py
example_jobs/: Ex01_HelloWorldAndLogging.py  Ex03_TestAndPostRunFunctions.py  Ex04_AccessingSecrets.py  Ex05_CreatingSiteObjects.py
nautobot_example_plugin/: models.py
nautobot_example_plugin/tests/: test_views.py
nautobot_plugin_example/: __init__.py  common.py  jobs.py  models.py  navigation.py  urls.py  views.py
nautobot_plugin_example/example_jobs/: Ex01_HelloWorldAndLogging.py  Ex02_Inputs.py  Ex03_TestAndPostRunFunctions.py  Ex04_AccessingSecrets.py
nautobot_plugin_example/jobs/: __init__.py
nautobot_plugin_example/jobs/example_jobs/: Ex01_HelloWorldAndLogging.py  Ex02_Inputs.py  Ex03_TestAndPostRunFunctions.py  Ex04_AccessingSecrets.py  Ex05_CreatingSiteObjects.py  Ex06_SchedulingJobs.py  Ex07_ExternalSys_Meraki.py  ExES01_ExternalSys_Meraki.py
nautobot_plugin_example/tests/: test_models.py  test_views.py
tests/: test_models.py
