[tool.poetry]
name = "nautobot-plugin-example"
version = "0.0.1"
description = "An example plugin for the Django-based web application Nautobot"
authors = ["Aaron Drydale"]
readme = "README.md"
packages = [{include = "nautobot_plugin_example"}]

[tool.poetry.dependencies]
python = "^3.9"
meraki = "^1.24.0"
pan-os-python = "^1.7.3"
netmiko = "^4.1.2"
textfsm = "^1.1.2"
Jinja2 = "^3.1.2"
netaddr = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
